# MinimalAF-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
MinimalAFCPP/: BufferedMeshOutput.cpp  BufferedMeshOutput.h  CMakeLists.txt  Color.h  Datatypes.h  Element.cpp  Element.h  Mesh.cpp  Mesh.h  MinimalAF.h  Rect.h  Rendering.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Window.cpp  Window.h  helpers.cpp  helpers.h  main.cpp
MinimalAFCPP/Datatypes/: Rect.h  Vertex.h
